2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Do stdout/stderr split in shell func, not in makefile.

	* Makefile.am (check-TESTS): Don't redirect stdout/stderr.
	* common.in (split_std_out_err): New func.
	(dontsplit): Delete func.
	* alive.test: Use ‘split_std_out_err’.
	* t000.test: Likewise.
	* t001.test: Likewise.
	* t999.test: Likewise.

2010-10-04  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use Automake for building xorlf.

	* Makefile.am (check_PROGRAMS): New var.
	* t999.test (xorlf): New var; use it for xorlf invocation.
	* xorlf.c: New file.

2010-10-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Use Automake for test preparation.

	* Makefile.am (check_SCRIPTS): New var.
	(check-TESTS): Clear prereq list.

2010-09-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[maint] Simplify ‘PATHPREFIX’ Makefile-internal protocol.

	* Makefile.am (PATHPREFIX): Init to the absolute name of
	the 0pre/bin directory under the build-tree src/.
	(TESTS_ENVIRONMENT): Don't run pwd(1).
	(installcheck-local): Rename target from ‘installcheck’;
	omit trailing colon from ‘PATHPREFIX’ specification.

2010-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Centralize tests; do complicated test last.

	* t999.test: Rename from ../src/alive.test; use ./common for init;
	change to t999.d/ before starting; combine stdout/stderr; inhibit
	cleanup if env var ‘KEEPD’ has value ‘1’.
	* Makefile.am (TESTS): Add t999.test.

2010-09-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Fix bug: Specify "./common" to avoid ‘PATH’ search.

	* alive.test: Say ". ./common".
	* t000.test: Likewise.
	* t001.test: Likewise.
	Reported by Ludovic Courtès.

2010-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 5.7.93

2010-06-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Update license to GPLv3+.

	* Makefile.am: Update license notice.
	* common.in: Likewise.

2010-05-31  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[v] Fix bug: Do a ‘co -l’ before modifying the working file.
