@@ -447,9 +447,6 @@ test $? = 0 || { echo "#rlog with working file repeated failed"; exit 1; }
 
 test ! -f $lockfile || { echo "#lock file not removed"; exit 1; }
 
-test x"$KEEPD" = x1 && exit 0
-
-rm -f a.* $RCSfile $RCS_alt
-$rmdir RCS
+cd ..
 
 # t999.test ends here
